[package]
name = "nd-zip"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
argh = "0.1.12"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
filetime = "0.2.25"
time = "0.3.37"
zip = { version = "2.2.2", features = [ "time" ] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"
